--- a/StellarExplorer_WPF/MainWindow.xaml
+++ b/StellarExplorer_WPF/MainWindow.xaml
@@ -1,12 +1,279 @@
-﻿<Window x:Class="StellarExplorer_WPF.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellarExplorer_WPF"
+        xmlns:Wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" x:Class="StellarExplorer_WPF.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        ResizeMode="NoResize"
+        Initialized="MainWindow_OnInitialized"
+        Title="Stellar Explorer - by Thomas Schaschinger" Height="600" Width="850">
+
+
+    <!-- Custom Styles -->
+    <Window.Resources>
+        <Style x:Key="STextBox" TargetType="{x:Type TextBox}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="TextAlignment" Value="Right"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SDropdowns" TargetType="{x:Type ComboBox}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SButton" TargetType="{x:Type Button}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SLabel" TargetType="{x:Type Label}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SDatepicker" TargetType="{x:Type DatePicker}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SScrollview" TargetType="{x:Type ScrollViewer}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SProgressbar" TargetType="{x:Type ProgressBar}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SCheckbox" TargetType="{x:Type CheckBox}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="SChart" TargetType="{x:Type Wpf:CartesianChart}">
+            <Setter Property="Margin" Value="2 2 2 2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
+
     <Grid>
-        
+        <!-- Tab Controls -->
+        <TabControl>
+            <!-- Here goes the live emulator for querying data -->
+            <TabItem Header="Live Data">
+                <Grid>
+
+                    <!-- Grid Definitions -->
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="4*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1.5*" />
+                        <ColumnDefinition Width="1.5*" />
+                        <ColumnDefinition Width="4*" />
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="2*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="13*" />
+                    </Grid.RowDefinitions>
+
+                    <!-- Components of Live Data -->
+                    <!-- Labels -->
+                    <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource SLabel}" Content="Date - Day, Month, Year"/>
+                    <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource SLabel}" Content="Time - Hour, Minute, Second"/>
+                    <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource SLabel}" Content="Geo. Longitude"/>
+                    <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource SLabel}" Content="Geo. Latitude"/>
+
+                    <!-- Datepicker -->
+                    <DatePicker Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource SDatepicker}"/>
+
+                    <!-- Textfields -->
+                    <!-- Time fields -->
+                    <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="1" Grid.Column="2" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="1" Grid.Column="3" Style="{StaticResource STextBox}"/>
+                    <!-- Geometrical longitude fields-->
+                    <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="2" Grid.Column="2" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="2" Grid.Column="3" Style="{StaticResource STextBox}"/>
+                    <!-- Geometrical latitude fields-->
+                    <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="3" Grid.Column="3" Style="{StaticResource STextBox}"/>
+
+                    <!-- Above sea -->
+                    <TextBox Grid.Row="3" Grid.Column="5" Style="{StaticResource STextBox}"/>
+
+                    <!-- Dropdowns -->
+                    <ComboBox Grid.Row="1" Grid.Column="4" Style="{StaticResource SDropdowns}" x:Name="CbEtut"/>
+                    <ComboBox Grid.Row="2" Grid.Column="4" Style="{StaticResource SDropdowns}"/>
+                    <ComboBox Grid.Row="3" Grid.Column="4" Style="{StaticResource SDropdowns}"/>
+
+                    <ComboBox Grid.Row="0" Grid.Column="5" Style="{StaticResource SDropdowns}"/>
+                    <ComboBox Grid.Row="1" Grid.Column="5" Style="{StaticResource SDropdowns}"/>
+                    <ComboBox Grid.Row="2" Grid.Column="5" Style="{StaticResource SDropdowns}"/>
+
+                    <ComboBox Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="2" Style="{StaticResource SDropdowns}"/>
+
+                    <!-- Buttons -->
+                    <Button Grid.Row="0" Grid.Column="7" Style="{StaticResource SButton}" Content="Do it!"/>
+                    <Button Grid.Row="1" Grid.Column="7" Style="{StaticResource SButton}" Content="Exit"/>
+
+                    <!-- Big scrollable textfield -->
+                    <ScrollViewer Grid.Row="5" Grid.ColumnSpan="8" HorizontalScrollBarVisibility="Disabled" Style="{StaticResource SScrollview}">
+                        <TextBlock/>
+                    </ScrollViewer>
+                </Grid>
+            </TabItem>
+            <!-- Here go calculations that are saved to the database -->
+            <TabItem Header="Ephemeris">
+                <Grid>
+                    <!-- Grid definitions -->
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <!-- First half where database controlls are accessible -->
+                    <Grid Grid.Column="0">
+
+                        <!-- Grid Definitions -->
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="5*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Label definitions -->
+                        <Label Grid.ColumnSpan="4" Style="{StaticResource SLabel}" HorizontalAlignment="Center" Content="Calculate Ephemeris entries in order to plot them!"/>
+                        <Label Grid.Row="1" Style="{StaticResource SLabel}" Content="From"/>
+                        <Label Grid.Row="2" Style="{StaticResource SLabel}" Content="Until"/>
+                        <Label Grid.Row="3" Style="{StaticResource SLabel}" Content="Interval"/>
+                        <Label Grid.Row="4" Grid.ColumnSpan="4" Style="{StaticResource SLabel}" Content="Monitor Data about Body:"/>
+                        <Label Grid.Row="5" Grid.ColumnSpan="2"  Style="{StaticResource SLabel}" Content="Save to Database as:"/>
+
+                        <!-- Datetimepicker definitions -->
+                        <DatePicker Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDatepicker}"/>
+                        <DatePicker Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDatepicker}"/>
+
+                        <!-- Textbox definitions -->
+                        <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource STextBox}"/>
+                        <TextBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource STextBox}"/>
+
+                        <!-- Combobox definitions -->
+                        <ComboBox Grid.Row="3" Grid.Column="3" Style="{StaticResource SDropdowns}"/>
+                        <ComboBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDropdowns}"/>
+
+                        <!-- Button definitions -->
+                        <Button Grid.Row="6" Grid.ColumnSpan="4" Style="{StaticResource SButton}" Content="Query Data"/>
+
+                        <!-- Progressbar definitions -->
+                        <ProgressBar Grid.Row="7" Grid.ColumnSpan="4"/>
+
+                    </Grid>
+
+                    <!-- Second half where datagrid will be displayed as soon as it is queried -->
+                    <Grid Grid.Column="1">
+                        <DataGrid/>
+                    </Grid>
+                </Grid>
+            </TabItem>
+            <!-- Here goes the querying for Data of minor bodies -->
+            <TabItem Header="Minor Center">
+                <Grid>
+                    <!-- Grid definitions -->
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="14*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="6*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <!-- Label definitions -->
+                    <Label Style="{StaticResource SLabel}">Minor Bodies:</Label>
+                    
+                    <!-- Textbox definitionsn -->
+                    <TextBox Grid.Column="1" Style="{StaticResource STextBox}"/>
+                    
+                    <!-- Button definitions -->
+                    <Button Grid.Row="1" Style="{StaticResource SButton}">Query!</Button>
+                    
+                    <!-- Progressbar definitions -->
+                    <ProgressBar Grid.Row="1" Grid.Column="1" Style="{StaticResource SProgressbar}"/>
+                    
+                    <!-- Textblock definitions -->
+                    <ScrollViewer Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource SScrollview}">
+                        <TextBlock>
+                            
+                        </TextBlock>
+                    </ScrollViewer>
+                    
+                </Grid>
+            </TabItem>
+            <!-- Here goes a graph plotter where ephemeris entries from the Ephemeris panel can be plotted -->
+            <TabItem Header="Plotter">
+                <Grid>
+
+                    <!-- Grid definitions -->
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="11*"/>
+                    </Grid.RowDefinitions>
+
+                    <!-- Combobox definitions -->
+                    <ComboBox Style="{StaticResource SDropdowns}"/>
+
+                    <!-- Grid definitions for display selection -->
+                    <Grid Grid.Column="1">
+
+                        <!-- Grid definitions -->
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Combobox definitions -->
+                        <CheckBox Grid.Row="0" Grid.Column="0" Style="{StaticResource SCheckbox}" Content="Eclyptical Longitude"/>
+                        <CheckBox Grid.Row="1" Grid.Column="0" Style="{StaticResource SCheckbox}" Content="Eclyptical Latitude"/>
+                        <CheckBox Grid.Row="0" Grid.Column="1" Style="{StaticResource SCheckbox}" Content="Distance"/>
+                        <CheckBox Grid.Row="1" Grid.Column="1" Style="{StaticResource SCheckbox}" Content="Speed"/>
+                        <CheckBox Grid.Row="0" Grid.Column="2" Style="{StaticResource SCheckbox}" Content="House"/>
+                        <CheckBox Grid.Row="1" Grid.Column="2" Style="{StaticResource SCheckbox}" Content="Eclyptical obl."/>
+
+                    </Grid>
+
+                    
+                    <!-- Chart definitions -->
+                    <Wpf:CartesianChart Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="2 2 2 2"/> 
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
