--- a/StellarExplorer_WPF/MainWindow.xaml
+++ b/StellarExplorer_WPF/MainWindow.xaml
@@ -4,13 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellarExplorer_WPF"
+        xmlns:localm="clr-namespace:StellarExplorer_WPF.Modelle"
+    
         xmlns:Wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" x:Class="StellarExplorer_WPF.MainWindow"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Initialized="MainWindow_OnInitialized"
         Title="Stellar Explorer - by Thomas Schaschinger" Height="600" Width="850">
-
-
     <!-- Custom Styles -->
     <Window.Resources>
         <Style x:Key="STextBox" TargetType="{x:Type TextBox}">
@@ -50,6 +50,9 @@
             <Setter Property="Margin" Value="2 2 2 2"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
+        
+        <ObjectDataProvider x:Key="DataProvider" ObjectType="{x:Type localm:FormData}"></ObjectDataProvider>
+        
     </Window.Resources>
 
     <Grid>
@@ -57,7 +60,7 @@
         <TabControl>
             <!-- Here goes the live emulator for querying data -->
             <TabItem Header="Live Data">
-                <Grid>
+                <Grid DataContext="{StaticResource DataProvider}">
 
                     <!-- Grid Definitions -->
                     <Grid.ColumnDefinitions>
