--- a/StellarExplorer_WPF/MainWindow.xaml
+++ b/StellarExplorer_WPF/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellarExplorer_WPF"
         xmlns:localm="clr-namespace:StellarExplorer_WPF.Modelle"
-    
-        xmlns:Wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" x:Class="StellarExplorer_WPF.MainWindow"
+        xmlns:localn="clr-namespace:StellarExplorer_WPF.MinorCenter"
+        xmlns:localo="clr-namespace:StellarExplorer_WPF.DataViewer"
+        xmlns:Wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
+        x:Class="StellarExplorer_WPF.MainWindow"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Initialized="MainWindow_OnInitialized"
@@ -52,6 +55,9 @@
         </Style>
         
         <ObjectDataProvider x:Key="DataProvider" ObjectType="{x:Type localm:FormData}"></ObjectDataProvider>
+        <ObjectDataProvider x:Key="DataProviderMinorCenter" ObjectType="{x:Type localn:DownloadManager}"></ObjectDataProvider>
+        <ObjectDataProvider x:Key="DataProviderEphemeris" ObjectType="{x:Type localo:DataViewerModel}"></ObjectDataProvider>
+        
         
     </Window.Resources>
 
@@ -60,7 +66,7 @@
         <TabControl>
             <!-- Here goes the live emulator for querying data -->
             <TabItem Header="Live Data">
-                <Grid DataContext="{StaticResource DataProvider}">
+                <Grid x:Name="OuterGrid" DataContext="{Binding Source={StaticResource DataProvider}}" >
 
                     <!-- Grid Definitions -->
                     <Grid.ColumnDefinitions>
@@ -89,49 +95,130 @@
                     <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource SLabel}" Content="Geo. Latitude"/>
 
                     <!-- Datepicker -->
-                    <DatePicker Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource SDatepicker}"/>
+                    <DatePicker Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource SDatepicker}"
+                                SelectedDate="{Binding Path=DateTime, Mode=TwoWay, TargetNullValue={x:Static System:DateTime.Now}}"
+                                />
 
                     <!-- Textfields -->
                     <!-- Time fields -->
-                    <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource STextBox}"/>
-                    <TextBox Grid.Row="1" Grid.Column="2" Style="{StaticResource STextBox}"/>
-                    <TextBox Grid.Row="1" Grid.Column="3" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource STextBox}"
+                             x:Name="TbTimeHour"
+                             Text="{Binding TimeHour}"
+                             />
+                    <TextBox Grid.Row="1" Grid.Column="2" Style="{StaticResource STextBox}"
+                             x:Name="TbTimeMinute"
+                             Text="{Binding TimeMinute}"
+                             />
+                    <TextBox Grid.Row="1" Grid.Column="3" Style="{StaticResource STextBox}"
+                             x:Name="TbTimeSecond"
+                             Text="{Binding TimeSecond}"
+                             />
                     <!-- Geometrical longitude fields-->
-                    <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource STextBox}"/>
-                    <TextBox Grid.Row="2" Grid.Column="2" Style="{StaticResource STextBox}"/>
-                    <TextBox Grid.Row="2" Grid.Column="3" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource STextBox}"
+                             x:Name="TbGeogrLongitudeHour"
+                             Text="{Binding GeoLongitudeHour}"
+                             />
+                    <TextBox Grid.Row="2" Grid.Column="2" Style="{StaticResource STextBox}"
+                             x:Name="TbGeogrLongitudeMinute"
+                             Text="{Binding GeoLongitudeMinute}"
+                             />
+                    <TextBox Grid.Row="2" Grid.Column="3" Style="{StaticResource STextBox}"
+                             x:Name="TbGeogrLongitudeSecond"
+                             Text="{Binding GeoLongitudeSecond}"
+                             />
                     <!-- Geometrical latitude fields-->
-                    <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource STextBox}"/>
-                    <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource STextBox}"/>
-                    <TextBox Grid.Row="3" Grid.Column="3" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource STextBox}"
+                             x:Name="TbGeogrLatitudeHour"
+                             Text="{Binding GeoLatitudeHour}"
+                             />
+                    <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource STextBox}"
+                             x:Name="TbGeogrLatitudeMinute"
+                             Text="{Binding GeoLongitudeMinute}"
+                             />
+                    <TextBox Grid.Row="3" Grid.Column="3" Style="{StaticResource STextBox}"
+                             x:Name="TbGeogrLatitudeSecond"
+                             Text="{Binding GeoLongitudeSecond}"
+                             />
 
                     <!-- Above sea -->
-                    <TextBox Grid.Row="3" Grid.Column="5" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Row="3" Grid.Column="5" Style="{StaticResource STextBox}"
+                             x:Name="TbMetersAboveSea"
+                             Text="{Binding MeterAboveSea}"
+
+                             />
 
                     <!-- Dropdowns -->
-                    <ComboBox Grid.Row="1" Grid.Column="4" Style="{StaticResource SDropdowns}" x:Name="CbEtut"/>
-                    <ComboBox Grid.Row="2" Grid.Column="4" Style="{StaticResource SDropdowns}"/>
-                    <ComboBox Grid.Row="3" Grid.Column="4" Style="{StaticResource SDropdowns}"/>
+                    <ComboBox Grid.Row="1" Grid.Column="4" Style="{StaticResource SDropdowns}" 
+                              x:Name="CbEtut" 
+                              ItemsSource="{Binding Path=LiEtut}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedEtut, Mode=TwoWay}"
+                              />
+                    
+                    <ComboBox Grid.Row="2" Grid.Column="4" Style="{StaticResource SDropdowns}"
+                              x:Name="CbLat_e_w"
+                              ItemsSource="{Binding Path=LiLat_e_w}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedEW, Mode=TwoWay}"
+                              />
+                    
+                    <ComboBox Grid.Row="3" Grid.Column="4" Style="{StaticResource SDropdowns}"
+                              x:Name="CbLat_n_s"
+                              ItemsSource="{Binding Path=LiLat_n_s}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedNS, Mode=TwoWay}"
+                              />
 
-                    <ComboBox Grid.Row="0" Grid.Column="5" Style="{StaticResource SDropdowns}"/>
-                    <ComboBox Grid.Row="1" Grid.Column="5" Style="{StaticResource SDropdowns}"/>
-                    <ComboBox Grid.Row="2" Grid.Column="5" Style="{StaticResource SDropdowns}"/>
+                    <ComboBox Grid.Row="0" Grid.Column="5" Style="{StaticResource SDropdowns}" 
+                              x:Name="CbEphe"
+                              ItemsSource="{Binding Path=LiEphe}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedEphe, Mode=TwoWay}"
+                              />
+                    
+                    <ComboBox Grid.Row="1" Grid.Column="5" Style="{StaticResource SDropdowns}"
+                              x:Name="CbPlansel"
+                              ItemsSource="{Binding Path=LiPlansel}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedPlansel, Mode=TwoWay}"
+                              />
+                    
+                    <ComboBox Grid.Row="2" Grid.Column="5" Style="{StaticResource SDropdowns}"
+                              x:Name="CbCtr"
+                              ItemsSource="{Binding Path=LiCtr}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedCtr, Mode=TwoWay}"
+                              />
 
-                    <ComboBox Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="2" Style="{StaticResource SDropdowns}"/>
+                    <ComboBox Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="2" Style="{StaticResource SDropdowns}"
+                              x:Name="CbHsysname"
+                              ItemsSource="{Binding Path=LiHsysname}"
+                              SelectedIndex="0"
+                              IsSynchronizedWithCurrentItem="True"
+                              SelectedItem="{Binding SelectedHysname, Mode=TwoWay}"
+                              />
 
                     <!-- Buttons -->
-                    <Button Grid.Row="0" Grid.Column="7" Style="{StaticResource SButton}" Content="Do it!"/>
-                    <Button Grid.Row="1" Grid.Column="7" Style="{StaticResource SButton}" Content="Exit"/>
+                    <Button Grid.Row="0" Grid.Column="7" Style="{StaticResource SButton}" 
+                            Content="Do it!" x:Name="btnDoIt" Command="{Binding Path=DoItCommand}"/>
+                    <Button Grid.Row="1" Grid.Column="7" Style="{StaticResource SButton}" Content="Exit"
+                            x:Name="BtnExit" Click="BtnExit_Click"/>
 
                     <!-- Big scrollable textfield -->
                     <ScrollViewer Grid.Row="5" Grid.ColumnSpan="8" HorizontalScrollBarVisibility="Disabled" Style="{StaticResource SScrollview}">
-                        <TextBlock/>
+                        <TextBlock x:Name="tbContentResult" Text="{Binding BufferString, Mode=TwoWay}"/>
                     </ScrollViewer>
                 </Grid>
             </TabItem>
             <!-- Here go calculations that are saved to the database -->
             <TabItem Header="Ephemeris">
-                <Grid>
+                <Grid DataContext="{Binding Source={StaticResource DataProviderEphemeris}}">
                     <!-- Grid definitions -->
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -171,19 +258,32 @@
                         <Label Grid.Row="5" Grid.ColumnSpan="2"  Style="{StaticResource SLabel}" Content="Save to Database as:"/>
 
                         <!-- Datetimepicker definitions -->
-                        <DatePicker Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDatepicker}"/>
-                        <DatePicker Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDatepicker}"/>
+                        <DatePicker Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDatepicker}"
+                                    SelectedDate="{Binding DateTimeFrom, Mode=TwoWay}"/>
+                        <DatePicker Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDatepicker}"
+                                    SelectedDate="{Binding DateTimeUntil, Mode=TwoWay}"/>
 
                         <!-- Textbox definitions -->
-                        <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource STextBox}"/>
-                        <TextBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource STextBox}"/>
+                        <TextBox Grid.Row="3" Grid.Column="2" Style="{StaticResource STextBox}"
+                                 Text="{Binding SelectedInterval, Mode=TwoWay}"/>
+                        <TextBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource STextBox}"
+                                 Text="{Binding SaveToDatabaseAs, Mode=TwoWay}"/>
 
                         <!-- Combobox definitions -->
-                        <ComboBox Grid.Row="3" Grid.Column="3" Style="{StaticResource SDropdowns}"/>
-                        <ComboBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDropdowns}"/>
+                        <ComboBox Grid.Row="3" Grid.Column="3" Style="{StaticResource SDropdowns}"
+                                  ItemsSource="{Binding SelectableIntervalsList}"
+                                  SelectedIndex="0"
+                                  IsSynchronizedWithCurrentItem="True"
+                                  SelectedItem="{Binding SelectedInterval, Mode=TwoWay}"/>
+                        <ComboBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource SDropdowns}"
+                                  ItemsSource="{Binding DataBaseBodiesList}"
+                                  SelectedIndex="0"
+                                  IsSynchronizedWithCurrentItem="True"
+                                  SelectedItem="{Binding SelectedBody, Mode=TwoWay}"/>
 
                         <!-- Button definitions -->
-                        <Button Grid.Row="6" Grid.ColumnSpan="4" Style="{StaticResource SButton}" Content="Query Data"/>
+                        <Button Grid.Row="6" Grid.ColumnSpan="4" Style="{StaticResource SButton}" Content="Query Data"
+                                Command="{Binding CalculateCommand}"/>
 
                         <!-- Progressbar definitions -->
                         <ProgressBar Grid.Row="7" Grid.ColumnSpan="4"/>
@@ -198,7 +298,7 @@
             </TabItem>
             <!-- Here goes the querying for Data of minor bodies -->
             <TabItem Header="Minor Center">
-                <Grid>
+                <Grid DataContext="{Binding Source={StaticResource DataProviderMinorCenter}}">
                     <!-- Grid definitions -->
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -214,19 +314,23 @@
                     <Label Style="{StaticResource SLabel}">Minor Bodies:</Label>
                     
                     <!-- Textbox definitionsn -->
-                    <TextBox Grid.Column="1" Style="{StaticResource STextBox}"/>
+                    <TextBox Grid.Column="1" Style="{StaticResource STextBox}"
+                             x:Name="tbToQueryAsteroids" Text="{Binding Path=ToQueryAsteroid, Mode=TwoWay}"
+                             />
                     
                     <!-- Button definitions -->
-                    <Button Grid.Row="1" Style="{StaticResource SButton}">Query!</Button>
+                    <Button Grid.Row="1" Style="{StaticResource SButton}"
+                            x:Name="btnQuery" Command="{Binding DownloadCommand}"
+                            >Query!</Button>
                     
                     <!-- Progressbar definitions -->
                     <ProgressBar Grid.Row="1" Grid.Column="1" Style="{StaticResource SProgressbar}"/>
                     
                     <!-- Textblock definitions -->
                     <ScrollViewer Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource SScrollview}">
-                        <TextBlock>
-                            
-                        </TextBlock>
+                        <TextBlock x:Name="tbQueriedAsteroids"
+                                   Text="{Binding Path=QueriedAsteroids, Mode=TwoWay}"
+                                   />
                     </ScrollViewer>
                     
                 </Grid>
